<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    >

    <!-- Add a Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue_2"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageView
                android:id="@+id/edt_profileBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.476"
                app:srcCompat="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/edtProfile"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="5dp"
                android:text="Edit Profile"
                android:singleLine="true"
                android:maxWidth="180dp"
                android:textColor="@color/white"
                android:textSize="23dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Your existing content inside a NestedScrollView -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:id="@+id/my_update_image"
            android:background="@drawable/custom_back_img_add"/>


        <View
            android:id="@+id/my_view_add_img"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:textColor="@color/black"
            android:layout_below="@id/my_update_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_5sdp"/>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@id/my_update_image"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="68dp"
            android:scaleType="fitCenter"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/user_0"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_lay_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:hint="@string/first_name"
            android:textColorHint="@color/grey"
            app:hintTextColor="@color/color_save_btn"
            app:boxStrokeColor="@color/color_save_btn"
            android:layout_below="@id/my_update_image"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_txt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPersonName"
                android:singleLine="false"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_lay_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/last_name"
            android:layout_below="@id/txt_lay_1"
            android:textColorHint="@color/grey"
            app:hintTextColor="@color/color_save_btn"
            app:boxStrokeColor="@color/color_save_btn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_txt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:layout_below="@id/txt_lay_2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginTop="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/call_2"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_lay_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/mobile_number"
            android:layout_below="@id/txt_lay_2"
            android:textColorHint="@color/grey"
            app:hintTextColor="@color/color_save_btn"
            app:boxStrokeColor="@color/color_save_btn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColor="@color/color_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_txt_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@id/txt_lay_3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/email_1"
            android:scaleType="fitCenter"
            android:padding="@dimen/_2sdp"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_lay_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/email"
            android:layout_below="@id/txt_lay_3"
            android:textColorHint="@color/grey"
            app:hintTextColor="@color/color_save_btn"
            app:boxStrokeColor="@color/color_save_btn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColor="@color/color_text"
            tools:ignore="HardcodedText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@id/txt_lay_4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="40dp"
            android:scaleType="fitCenter"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/company_2"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_lay_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/company_name"
            android:layout_below="@id/txt_lay_4"
            android:textColorHint="@color/grey"
            app:hintTextColor="@color/color_save_btn"
            app:boxStrokeColor="@color/color_save_btn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColor="@color/color_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/my_txt_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/lay_7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/txt_lay_5"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/my_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_2"
                android:elevation="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                 />


            <Button
                android:id="@+id/my_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_2"
                android:elevation="@dimen/_5sdp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@id/lay_7"/>
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>